# quicksilver

./: README.md
3rd_party_software/pyca/: .gitignore  CMakeLists.txt  Copyright.txt  GenPythonModule.py  PyCAConfig.cmake.in  PyCAFunctions.cmake  PyCAVersionConfig.cmake  README.md  default.nix  doxy2swig.py  preinc.h
3rd_party_software/pyca/CMake/: FindFFTW.cmake
3rd_party_software/pyca/Code/: DoxyMainPage.h  TemplateParse.py
3rd_party_software/pyca/Code/Cxx/: CMakeLists.txt  README
3rd_party_software/pyca/Code/Cxx/inc/alg/: CFluidKernelFFT.h  FluidKernelFFT.h  FluidKernelFFTBase.h  FluidKernelFFTInterface.h  GFluidKernelFFT.h  GGaussRecFilter.h  GGaussUtils.h  GGaussianFilter.h  GaussRecFilter.h  GaussRecFilterBase.h  GaussRecFilterInterface.h  GaussUtils.h  GaussianFilter.h  GaussianFilterBase.h  GaussianFilterInterface.h  IdentityFilter.h  MultiscaleManager.h  MultiscaleResampler.h  MultiscaleResamplerInterface.h  SeparableFilter.h  SeparableFilter.txx
3rd_party_software/pyca/Code/Cxx/inc/base/: CudaUtils.h  DownSampleParamUtils.h  GaussParamUtils.h  MemoryManager.h  PyCAException.h  PyCAThread.h  Reduce.h  Selector.h  StringUtils.h  conditionMacro.h  gcache.h  log.h  pycaConst.h  pycaUtils.h
3rd_party_software/pyca/Code/Cxx/inc/io/: ITKFileIO.h
3rd_party_software/pyca/Code/Cxx/inc/math/: CMemOpers.h  FOpers.h  FieldOpers.h  GMemOpers.h  HFOpers.h  HFieldOpers.h  IFOpers.h  IOpers.h  ImageFieldOpers.h  ImageOpers.h  MOpers.h  MemOpers.h  ReduceOb.h  Reduction.h  VFOpers.h  VFieldOpers.h
3rd_party_software/pyca/Code/Cxx/inc/thread/: ThreadIdentity.h  ThreadSingleton.h  ThreadSingletonC.h
3rd_party_software/pyca/Code/Cxx/inc/types/: AccumType.h  Aff3D.h  Array.h  Field3D.h  GridInfo.h  Image3D.h  Mat3D.h  MemPool.h  Vec2D.h  Vec3D.h  Vec3D.txx  boost_mem.h  boost_mem.txx  estream.h  gmem.h  mem.h  mem.txx
3rd_party_software/pyca/Code/Cxx/src/: CMakeLists.txt
3rd_party_software/pyca/Code/Cxx/src/alg/: CFluidKernelFFT.cxx  FluidKernelFFTBase.cxx  GFluidKernelFFT.cxx  GFluidKernelFFTKernels.cu  GFluidKernelFFTKernels.h  GGaussRecFilter.cxx  GGaussRecFilterKernels.cu  GGaussRecFilterKernels.h  GGaussUtils.cu  GGaussianFilter.cxx  GaussRecFilterBase.cxx  GaussUtils.cxx  GaussianFilterBase.cxx  MultiscaleManager.cxx  MultiscaleResampler.cxx
3rd_party_software/pyca/Code/Cxx/src/base/: CReduce.cxx  CReduce.h  CudaUtils.cxx  DownSampleParamUtils.cxx  GReduce.cu  GReduce.h  GReduceStream.cu  GReduceStream.h  GaussParamUtils.cxx  MemoryManager.cxx  PyCAThread.cxx  Reduce.cxx  ReduceKernel.cu  ReduceStreamKernel.cu  Reduce_inst.tpl  StringUtils.cxx
3rd_party_software/pyca/Code/Cxx/src/io/: ITKFileIO.cxx
3rd_party_software/pyca/Code/Cxx/src/math/: CFieldOpers.cxx  CFieldOpers.h  CFiniteDiff.cxx  CFiniteDiff.h  CHFieldOpers.cxx  CHFieldOpers.h  CImageFieldOpers.cxx  CImageFieldOpers.h  CImageFieldOpers_inst.tpl  CImageOpers.cxx  CImageOpers.h  CImageOpers_inst.tpl  CMemOpers.cxx  CSplat.h  CVFieldOpers.cxx  CVFieldOpers.h  FOpers.cxx  FOpers_inst.tpl  FieldOpers.cxx  FieldOpers_inst.tpl  FiniteDiff.h  GFieldOperKernels.cu  GFieldOperKernels.h  GFieldOperKernels_inst.tpl  GFieldOpers.cxx  GFieldOpers.h  GFieldOpers_inst.tpl  GHFieldOperKernels.cu  GHFieldOperKernels.h  GHFieldOpers.cxx  GHFieldOpers.h  GImageFieldOperKernels.cu  GImageFieldOperKernels.h  GImageFieldOperKernels_inst.tpl  GImageFieldOpers.cxx  GImageFieldOpers.h  GImageFieldOpers_inst.tpl  GImageOperKernels.cu  GImageOperKernels.h  GImageOperKernels_inst.tpl  (+33 more)
3rd_party_software/pyca/Code/Cxx/src/thread/: ThreadIdentity.cxx  ThreadSingleton.cxx
3rd_party_software/pyca/Code/Cxx/src/types/: Aff3D.cxx  Array.cxx  Field3D.cxx  Image3D.cxx  Mat3D.cxx  MemPool.cxx  estream.cxx  gmem.cu  mem.cxx
3rd_party_software/pyca/Code/Python/: __init__.py
3rd_party_software/pyca/Code/Python/Common/: PyCACommon.py  PyCADebug.py  PyCAIO.py  PyCATestData.py  PyCAVersion.py.in  __init__.py
3rd_party_software/pyca/Code/Python/Display/: PyCADisplay.py  __init__.py
3rd_party_software/pyca/Code/Python/Numpy/: FiniteDiff.py  __init__.py
3rd_party_software/pyca/Code/Python/Parallel/: PyCAParallel.py  __init__.py
3rd_party_software/pyca/Code/Python/VTK/: PyCAVTK.py  __init__.py
3rd_party_software/pyca/Code/SWIG/: CMakeLists.txt  Core.i  alg.i  base.i  io.i  math.i  type_opers.i  types.i  usage_stats.i
3rd_party_software/pyca/Docs/: Doxyfile
3rd_party_software/pyca/Examples/: ElastReg.py  ElastRegSingleScale.py  GreedyReg.py  PrimalDualTV.py  ROFTV.py
3rd_party_software/pyca/Testing/: AdjointUnitTest.py  CpuGpuUnitTest.py  InterpUnitTest.py  MemMgrUnitTest.py  MiscUnitTest.py  NumpyUnitTest.py  PyCATest.py
3rd_party_software/pyca/Testing/TestUtilities/: TestFuncs.sh
code/: qs_predict.py  registration_methods.py  test_IBSR.py  train.py  util.py
code/applications/: LDDMM_spec.yaml  qs_predict.py  qs_predict_probablistic.py  qs_train.py
code/tests/: util_tests.py
code/tools/: LDDMM_spec.yaml  create_pth.py  prepare_correction_training_data.py  qs_train.py
code/vectormomentum/: Copyright.txt  README.md
full_quicksilver_walkthrough/step2/: deep_network_100_127.yaml  deep_network_101_61.yaml  deep_network_102_298.yaml  deep_network_103_117.yaml  deep_network_104_198.yaml  deep_network_105_62.yaml  deep_network_106_226.yaml  deep_network_107_99.yaml  deep_network_108_245.yaml  deep_network_109_258.yaml  deep_network_10_361.yaml  deep_network_110_280.yaml  deep_network_111_169.yaml  deep_network_112_32.yaml  deep_network_113_86.yaml  deep_network_114_342.yaml  deep_network_115_57.yaml  deep_network_116_309.yaml  deep_network_117_202.yaml  deep_network_118_373.yaml  deep_network_119_30.yaml  deep_network_11_59.yaml  deep_network_120_166.yaml  deep_network_121_40.yaml  deep_network_122_360.yaml  deep_network_123_2.yaml  deep_network_124_290.yaml  deep_network_125_306.yaml  deep_network_126_325.yaml  deep_network_127_32.yaml  deep_network_128_150.yaml  deep_network_129_98.yaml  deep_network_12_364.yaml  deep_network_130_300.yaml  deep_network_131_162.yaml  deep_network_132_341.yaml  deep_network_133_69.yaml  (+336 more)
(+120 files in other folders)
